Fixed Popular Product Card Text not being visible

--- a/src/components/PopularItems/popular-items.css
+++ b/src/components/PopularItems/popular-items.css
@@ -27,7 +27,7 @@
   overflow-x: auto;
   scroll-behavior: smooth;
   padding: 40px 0px 0px 0px;
-  height: 460px;
+  height: 490px;
   overflow-y: hidden;
 }
 
